# menger-sponge

./: CMakeLists.txt  README.md  cube.h  main.cpp  shader_s.h  stb_image.h
libs/glad/: glad.c  glad.h
shaders/: fragment_shader.fs  vertex_shader.vs
